--- a/chat.html
+++ b/chat.html
@@ -2,14 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>댓글</title>
+    <title>채팅</title>
     <style type="text/css">
         h1{text-align: center; margin-top:100px; color:#444;}
     </style>
 </head>
 <body>           
                            <h1>채팅 기능</h1>
-                           <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -22,6 +22,5 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-                            <script id="dsq-count-scr" src="//first-test-1.disqus.com/count.js" async></script>
 </body>
 </html>
